# Accommodation_Discovery_Agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy-oidc.yml
docs/: architecture_decisions.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: index.css  types.ts
frontend/src/components/: Chat.tsx
frontend/src/components/ui/: GlassPanel.tsx  Icon.tsx
frontend/src/hooks/: useSearch.ts
ideaAndplan/: architecture_decision.md  aws_services.md  dev_plan.md  final_plan.md  idea.md  low_level_design.md  tech_stack.md
ideaAndplan/stages/: 01_project_scaffold.md  02_mcp_server.md  03_web_tools.md  04_es_redis.md  05_agent_orchestrator.md
src/: main.py
src/agent/: graph.py  state.py
src/agent/nodes/: evaluate.py  execute.py  intent.py  plan.py  synthesize.py  validate.py
src/api/: server.py
src/api/routes/: health.py  search.py
src/common/: errors.py
src/config/: settings.py
src/domain/models/: job.py  property.py  search.py
src/guardrails/input/: classifier.py  rate_limiter.py
src/guardrails/output/: grounding.py  guard.py  pii.py
src/infrastructure/persistence/elasticsearch/: repository.py
src/infrastructure/resilience/: bulkhead.py  circuit_breaker.py  retry.py  timeout.py
src/mcp/: registry.py  server.py
src/mcp/tools/: __init__.py  base.py  brave_search.py  cache.py  es.py  extraction.py  firecrawl.py  synthesize.py
tests/: test_agent_graph.py  test_agent_nodes.py  test_bedrock_client.py  test_domain_models.py  test_es_repository.py  test_external_clients.py  test_guardrails.py  test_health.py  test_mcp_tools.py  test_redis_repositories.py  test_resilience.py
(+3 files in other folders)
