[project]
name = "accommodation-discovery-agent"
version = "0.1.0"
description = "AI-powered accommodation discovery platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "elasticsearch>=8.15.0",
    "redis>=5.1.0",
    "httpx>=0.27.0",
    "boto3>=1.35.0",
    "mcp>=1.0.0",
    "langgraph>=0.2.0",
    "langchain-aws>=0.2.0",
    "structlog>=24.4.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "httpx>=0.27.0",
]
